updates topology color

--- a/ui/controls/topology.reel/_topology.css
+++ b/ui/controls/topology.reel/_topology.css
@@ -1,5 +1,5 @@
 .Topology {
-    border-bottom: 1px solid var(--grey-blue);
+    border-bottom: 1px solid var(--primary--4);
 
     /* log & cache */
     & .flex-row > * {
