--- a/ui/controls/topology.reel/topology-item.reel/_topology-item.css
+++ b/ui/controls/topology.reel/topology-item.reel/_topology-item.css
@@ -6,7 +6,7 @@
 .TopologyItem {
     position: relative;
     z-index: 1;
-    background: var(--grey);
+    background: var(--primary--7);
     display: flex;
     flex-direction: column;
     min-height: 2em;
@@ -34,7 +34,7 @@ Title
     line-height: 1.7em;
     padding: 0 1em;
     font-weight: 400;
-    background: var(--grey-blue);
+    background: var(--primary);
     border-top: 2px solid currentColor;
     overflow: hidden;
     /* set to hide behind dropZone overlay */
