--- a/ui/controls/topology.reel/vdev.reel/_vdev.css
+++ b/ui/controls/topology.reel/vdev.reel/_vdev.css
@@ -51,7 +51,7 @@
 }
 
 .Vdev-grid {
-    background: var(--grey-blue);
+    background: var(--primary);
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
     box-shadow: 0 1px 1px var(--shadow-1);
@@ -73,7 +73,7 @@ Vdev Title
     position: relative;
     order: -1;
     text-align: left;
-    background: var(--black);
+    background: var(--primary--9);
     border-top-right-radius: 4px;
     border-top-left-radius:  4px;
     padding: 0 .25em;
