--- a/ui/controls/tree-view.reel/_tree-view.css
+++ b/ui/controls/tree-view.reel/_tree-view.css
@@ -1,7 +1,6 @@
 .TreeView {
-    border: 1px solid var(--black);
     border-radius: 4px;
-    background-color: var(--grey-blue);
+    background-color: var(--primary);
     transition: opacity .25s ease-in-out;
     overflow: hidden;
 
@@ -15,8 +14,7 @@
     position: relative;
     display: flex;
     align-items: center;
-    border-bottom: 1px solid var(--black);
-    background: var(--black);
+    background: var(--primary--9);
     color: var(--white);
 }
 
@@ -74,8 +72,7 @@
     display: flex;
     justify-content: space-between;
     padding: .5em;
-    background: var(--black);
-    border-top: 1px solid var(--black);
+    background: var(--primary--9);
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
 }
