--- a/ui/controls/tree-view.reel/child-node.reel/_child-node.css
+++ b/ui/controls/tree-view.reel/child-node.reel/_child-node.css
@@ -2,12 +2,17 @@
     position: relative;
     display: flex;
     cursor: pointer;
-    border-bottom: 1px solid rgba(0,0,0,.25);
+    border-bottom: 1px solid var(--primary--4);
     transition: background-color .15s ease-in-out;
     user-select: none;
 
+    &:hover {
+        background-color: var(--primary--4);
+        color: var(--white);
+    }
+
     &.is-selected {
-        background-color: var(--blue-lighten-2);
+        background-color: var(--color-selected);
         color: var(--white);
     }
 }
@@ -22,8 +27,6 @@
         box-shadow: none;
         outline: none;
     }
-
-    &:hover { background-color: rgba(255,255,255,.025);}
 
     & svg {
         width: 100%;
