--- a/ui/controls/unixPermissions.reel/_unixPermissions.css
+++ b/ui/controls/unixPermissions.reel/_unixPermissions.css
@@ -1,34 +1,56 @@
 .Permissions {
-    margin-bottom: 1em;
+    margin-bottom: 2em;
+
+    & table {
+        max-width: 5rem !important;
+    }
+
+    & td {
+        min-width: 5rem;
+        text-align: center;
+        padding: 0;
+    }
+
+    & th {
+        padding-bottom: .5rem;
+        vertical-align: middle;
+    }
+
+    & tr {
+        height: 2rem;
+    }
 }
 
-.Permissions-title.InspectorSectionTitle {
-    margin: 0 !important;
-}
+/* title */
+.Permissions-title.InspectorSectionTitle { margin-top: 0 !important; }
 
-.Permissions-flags {
-    text-align: center;
-    width: 100%;
-    margin-bottom: 1em;
-
-    color: rgba(255,255,255,.8);
-}
-
-.Permissions .PermissionsFlag-label{
-    font-weight: 300;
-    padding-bottom: .5em;
-}
-
-.Permissions .Checkbox label:before {
-    margin-right: 0;
-}
-
-.Permissions tr:not(:first-child) .PermissionsFlag-label {
-    width: 6.5em;
-    text-align: right;
-}
+.Permissions-flags { margin-bottom: 1em; }
 
 .Permissions.is-disabled .Permissions-title,
 .Permissions.is-disabled .PermissionsFlag-label {
     opacity: .5;
 }
+
+.Permissions .PermissionsFlag-label { font-weight: 300; }
+
+.Permissions .Checkbox label:before { margin-right: 0; }
+
+.Permissions tr:not(:first-child) .PermissionsFlag-label {
+    width: 5rem;
+    padding-right: 1rem;
+    text-align: left;
+}
+
+/* Mode Adjustments */
+
+.Permissions-mode {
+    & .Field-title  {
+        width: 5.25rem;
+    }
+
+    & .Field-control .control {
+        max-width: 2.9rem;
+        min-width: auto;
+    }
+}
+
