--- a/ui/dashboard/notifications.reel/notification.reel/_notification.css
+++ b/ui/dashboard/notifications.reel/notification.reel/_notification.css
@@ -1,9 +1,9 @@
 .Notification {
     position: relative;
-    background-color: rgba(0,0,0,.1);
+    background-color: var(--primary--7);
 
     & .Notification-placeholder > div:first-child {
-        border-bottom:  2px solid rgba(255,255,255,.05);
+        border-bottom:  2px solid var(--primary--6);
     }
 }
 
@@ -22,13 +22,13 @@
                 background-color .25s ease-in-out;
 
     &:hover {
-        background-color: var(--transparent--lighten);
+        background-color: var(--primary--6);
         cursor: pointer;
         color: var(--white);
     }
 
     @nest .Notification.is-expanded & {
-        background-color: var(--blue);
+        background-color: var(--primary--4);
         color: var(--white);
     }
 }
