--- a/ui/dashboard/widgets/widget.reel/_widget.css
+++ b/ui/dashboard/widgets/widget.reel/_widget.css
@@ -6,7 +6,7 @@
     display: flex;
     height: 15em;
     flex-direction: column;
-    background: var(--main-bg-color);
+    background-color: var(--primary--8);
     border-radius: var(--widget-border-radius);
     overflow: hidden;
     box-shadow: 0px 0px 2px 2px color(var(--color-selected) a(0%));
@@ -23,7 +23,7 @@
     padding: .5rem;
     line-height: 1em;
     height: 2.5em;
-    background-color: var(--grey-blue);
+    background-color: var(--primary);
     color: var(--grey-3);
 
     & svg {
@@ -62,6 +62,8 @@
     overflow: hidden;
     border-bottom-left-radius:  4px;
     border-bottom-right-radius: 4px;
+    border: 1px solid var(--primary);
+    border-top: none;
 
     &:before {
         content: '';
