--- a/ui/drawer.reel/drawer-item.reel/_drawer-item.css
+++ b/ui/drawer.reel/drawer-item.reel/_drawer-item.css
@@ -1,6 +1,6 @@
 :root {
-    --drawer-height: 7rem;
-    --drawer-width:  13rem;
+    --drawer-height: 5rem;
+    --drawer-width:  12rem;
 }
 
 .DrawerItem {
@@ -11,35 +11,33 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: .75em;
-    height: 2.5em;
+    padding: .5em;
+    height: 2rem;
     line-height: 1em;
-    background: var(--grey);
-    color: var(--grey-3);
-    border-top-left-radius: 4px;
+    background-color: var(--primary--6);
+    border-top-left-radius:  4px;
     border-top-right-radius: 4px;
 }
 
 .DrawerItem-infoToggle {
+    display: none;
     width:  2em;
     height: 2em;
     color: color(var(--grey-3) blackness(50%));
     transition: color .2s ease-in-out;
 
-    &:hover {
-        color: var(--grey-3);
-    }
+    &:hover { color: var(--grey-3);}
 }
 
 .DrawerItem main {
     position: relative;
     height: var(--drawer-height);
-    width: var(--drawer-width);
-    background: var(--main-bg-color);
+    width:  var(--drawer-width);
+    background: pink;
     overflow: hidden;
     border-bottom-left-radius:  4px;
     border-bottom-right-radius: 4px;
-    border: 2px solid var(--grey);
+    border: 2px solid var(--primary--6);
     border-top: none;
 }
 
