--- a/ui/inspectors/calendar.reel/calendar-widget.reel/calendar-widget-day.reel/_calendar-widget-day.css
+++ b/ui/inspectors/calendar.reel/calendar-widget.reel/calendar-widget-day.reel/_calendar-widget-day.css
@@ -1,50 +1,57 @@
+:root {
+    --day-bg-color: var(--primary);
+}
+
 .CalendarWidgetDay {
     position: relative;
     width: 14.2857%;
-    border-right: 1px solid var(--main-bg-color);
-    border-top:   1px solid var(--main-bg-color);
-    background: var(--grey-blue);
+    border-right: 1px solid var(--calender-line--strong);
+    border-top:   1px solid var(--calender-line--strong);
+    background-color: pink;
     font-size: .8em;
 
     &.show-more {
         z-index: 2;
-        background-color: var(--grey-blue);
+        background-color: pink;
     }
 }
 
 .CalendarWidgetDay-Sunday,
 .CalendarWidgetDay-Saturday {
-    background-color: var(--grey);
+    background-color: red;
 }
 
 .CalendarWidgetDay-otherMonth {
-    background-color: var(--grey-blue-1);
+    background-color: var(--primary--6);
     cursor: inherit;
+
+    & .CalendarWidgetDay-date {
+        color: pink;
+    }
 }
 
 .CalendarWidgetDay-date { text-align: right; }
 
-.CalendarWidgetDay-otherMonth .CalendarWidgetDay-date {
-    color: transparent;
-}
 
 .CalendarWidgetDay-today {
-    background: var(--grey);
+    background-color: var(--primary);
     box-shadow: 0 0 8px 2px var(--transparent--darken);
+
+    /* border */
+    &:before {
+        content: '';
+        position: absolute;
+        top:    -1px;
+        left:   -1px;
+        right:  -1px;
+        bottom: -1px;
+        border: 1px solid var(--primary--3);
+    }
 }
 
-.CalendarWidgetDay-today:before {
-    content: '';
-    position: absolute;
-    top:    -1px;
-    left:   -1px;
-    right:  -1px;
-    bottom: -1px;
-    border: 1px solid var(--grey-blue-2);
-}
 
 .CalendarWidgetDay-today .CalendarWidgetDay-date {
-    color: var(--grey-3);
+    color: var(--white);
 }
 
 .CalendarWidgetDay-content {
@@ -53,7 +60,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: var(--grey-blue);
+    background-color: var(--day-bg-color);
     padding: .25em;
 
     &:before {
@@ -67,8 +74,8 @@
         border: 1px dashed currentColor;
 
         @nest .acceptDrop & {
-            border: 1px dashed var(--green);
-            background-color:  color(var(--green) a(10%));
+            border: 1px dashed var(--accent);
+            background-color:  color(var(--accent) a(10%));
         }
 
         @nest .willAcceptDrop & {
@@ -78,7 +85,7 @@
 
         @nest .acceptDrop & {
             display: block;
-            border: 1px solid var(--green);
+            border: 1px solid var(--accent);
         }
     }
 
@@ -87,7 +94,7 @@
         box-shadow: 0 0 0 1px var(--transparent--lighten), 0 4px 10px 4px color(var(--black) a(90%));
         border-bottom-left-radius: 4px;
         border-bottom-right-radius: 4px;
-        background-color: var(--grey-blue);
+        background-color: var(--day-bg-color);
     }
 
 }
