--- a/ui/inspectors/calendar.reel/task-category.reel/_task-category.css
+++ b/ui/inspectors/calendar.reel/task-category.reel/_task-category.css
@@ -31,24 +31,24 @@
 
 .TaskCategory.is-displayed .TaskCategory-name                                       { color: var(--grey-3); }
 
-.TaskCategory.type-rsync_copy                                                       { color: var(--orange); border-color: currentColor; }
-.TaskCategory.type-rsync_copy.is-displayed .TaskCategory-name                       { background-color: var(--orange); }
+.TaskCategory.type-rsync_copy                                                       { color: var(--task-rsync-color);}
+.TaskCategory.type-rsync_copy.is-displayed .TaskCategory-name                       { background-color: var(--task-rsync-color); }
 
-.TaskCategory.type-volume_scrub                                                     { color: var(--blue-darken-2); }
-.TaskCategory.type-volume_scrub.is-displayed .TaskCategory-name                     { background-color: var(--blue-darken-2); }
+.TaskCategory.type-volume_scrub                                                     { color: var(--task-scrub-color); }
+.TaskCategory.type-volume_scrub.is-displayed .TaskCategory-name                     { background-color: var(--task-scrub-color); }
 
-.TaskCategory.type-replication_replicate_dataset                                    { color: var(--aqua); }
-.TaskCategory.type-replication_replicate_dataset.is-displayed .TaskCategory-name    { background-color: var(--aqua); }
+.TaskCategory.type-replication_replicate_dataset                                    { color: var(--task-replication-color); }
+.TaskCategory.type-replication_replicate_dataset.is-displayed .TaskCategory-name    { background-color: var(--task-replication-color); }
 
-.TaskCategory.type-disk_parallel_test                                               { color: var(--purple); }
-.TaskCategory.type-disk_parallel_test.is-displayed .TaskCategory-name               { background-color: var(--purple); }
+.TaskCategory.type-disk_parallel_test                                               { color: var(--task-smart-color); }
+.TaskCategory.type-disk_parallel_test.is-displayed .TaskCategory-name               { background-color: var(--task-smart-color); }
 
-.TaskCategory.type-update_checkfetch                                                { color: var(--yellow-orange); }
-.TaskCategory.type-update_checkfetch.is-displayed .TaskCategory-name                { background-color: var(--yellow-orange); }
+.TaskCategory.type-update_checkfetch                                                { color: var(--task-update-color); }
+.TaskCategory.type-update_checkfetch.is-displayed .TaskCategory-name                { background-color: var(--task-update-color); }
 
-.TaskCategory.type-volume_snapshot_dataset                                          { color: var(--maroon); }
-.TaskCategory.type-volume_snapshot_dataset.is-displayed .TaskCategory-name          { background-color: var(--maroon); }
+.TaskCategory.type-volume_snapshot_dataset                                          { color: var(--task-snapshot-color); }
+.TaskCategory.type-volume_snapshot_dataset.is-displayed .TaskCategory-name          { background-color: var(--task-snapshot-color); }
 
-.TaskCategory.type-calendar_task_command                                            { color: var(--grey-1); }
-.TaskCategory.type-calendar_task_command.is-displayed .TaskCategory-name            { background-color: var(--grey-1); }
+.TaskCategory.type-calendar_task_command                                            { color: var(--task-command-color); }
+.TaskCategory.type-calendar_task_command.is-displayed .TaskCategory-name            { background-color: var(--task-command-color); }
 
