--- a/ui/inspectors/calendar.reel/calendar-widget.reel/_calendar-widget.css
+++ b/ui/inspectors/calendar.reel/calendar-widget.reel/_calendar-widget.css
@@ -1,13 +1,12 @@
 :root {
-    --bg:       var(--grey-blue);
-    --titleBg:  var(--grey-blue-1);
-    --buttonBg: var(--grey-blue-1);
+    --bg:       var(--primary--6);
+    --titleBg:  var(--primary--8);
+    --buttonBg: var(--primary);
     --hourHeight: 3rem;
     --calenderStrongLine: var(--main-bg-color);
     --calenderWeakLine: color(var(--calenderStrongLine) alpha(.3));
-    --allDayBg: var(--grey);
+    --allDayBg: var(--primary--4);
 }
-
 
 .CalendarWidget {
     flex-grow: 0;
@@ -16,19 +15,17 @@
     position: relative;
     border-spacing: 0;
     font-weight: 200;
-    border: 1px solid var(--main-bg-color);
     min-width: 45em;
-}
 
-.CalendarWidget > header { margin-bottom: 1em; }
+    & > header { margin-bottom: 1em; }
 
-.CalendarWidget caption {
-    padding: 1em 0;
-    text-align: left;
+    & caption {
+        padding: 1em 0;
+        text-align: left;
+    }
 }
 
 .CalendarWidget-date {
-    color: var(--grey-3);
     font-size: 1.5em;
     flex: 1;
 }
@@ -43,36 +40,12 @@
 
 .Calendar-navigation button {
     font-size: .8em;
-    height: 2.5em;
+    height:   2.5em;
     background-color: var(--buttonBg);
-    color: var(--grey-1);
-    border: 1px solid var(--black);
-    cursor: pointer;
-    outline: none;
-
-    &:hover {
-        background-color: color(var(--buttonBg) lightness(25%));
-    }
 }
 
-.Calendar-navigation button:active {
-    background-color: var(--blue-lighten-2);
-    color: var(--white);
-}
+.CalendarWidget-todayButton.Button { margin-right: .5rem; }
 
-.CalendarWidget-todayButton {
-    height: 2rem;
-    padding: 0 1rem;
-    margin-right: .5rem;
-    border-radius: 4px;
-    border: none;
-    outline: none;
-}
-
-.CalendarWidget-todayButton.montage--disabled {
-    opacity: .25;
-    cursor: not-allowed;
-}
 
 /* Calendar Navigation */
 
@@ -88,40 +61,17 @@
     margin-right: 1em;
 }
 
-.Calendar-navigation-button {
-    height: 2rem;
-    width:  2rem;
-    background: var(--grey-blue);
-    color: var(--grey-1);
-    cursor: pointer;
-}
-
-.Calendar-navigation-button svg { width: 1.4em; }
-
-.Calendar-navigation-button:first-child {
-    border-top-left-radius:     4px;
-    border-bottom-left-radius:  4px;
-    border-right: none;
-}
-
-.Calendar-navigation-button:first-child svg {
-    transform: rotate(180deg);
-}
-
-.Calendar-navigation-button:last-child {
-    border-top-right-radius:     4px;
-    border-bottom-right-radius:  4px;
+.CalendarWidget-previousMonthButton {
+    & svg {
+        transform: rotate(180deg);
+    }
 }
 
 /* Days Header Height */
 
 .CalendarWidget thead td {
-    background: var(--grey-blue-1);
-    color: var(--grey-3);
+    background-color: var(--titleBg);
     font-weight: 200;
-    height:      1rem;
-    line-height: 1rem;
-    font-size: .8em;
     text-align: center;
 }
 
@@ -171,7 +121,7 @@ Header
 .CalendarWidget-view-days {
     display: flex;
     flex: 1;
-    background: var(--titleBg);
+    background-color: var(--titleBg);
 }
 
 .CalendarWidget-view-day {
@@ -194,7 +144,7 @@ Header
     position: relative;
     padding: .15em .25em;
     padding-bottom: 1em;
-    background: var(--allDayBg);
+    background-color: var(--allDayBg);
 }
 
 /*
@@ -206,7 +156,7 @@ Main Content
 .CalendarWidget-view-main {
     position: relative;
     flex: 1;
-    border: 1px solid var(--calenderStrongLine);
+    border: 1px solid var(--calender-line--strong);
     background-color: var(--bg);
     display: flex;
 
@@ -232,7 +182,7 @@ Main Content
 .CalendarWidget-view-hours {
     flex: 1;
     position: relative;
-    background-color: var(--titleBg);
+    background-color: var(--primary);
 
     /* Grid */
 
@@ -243,7 +193,7 @@ Main Content
         left: 0;
         right: 0;
         bottom: 0;
-        background-image: linear-gradient(var(--calenderStrongLine) 1px, transparent 1px);
+        background-image: linear-gradient(var(--calender-line--strong) 1px, transparent 1px);
         background-size: var(--hourHeight) var(--hourHeight);
         background-position: -1px -1px;
     }
@@ -256,7 +206,7 @@ Main Content
     position: relative;
     line-height: 1.5em;
     height: var(--hourHeight);
-    border-right: 1px solid var(--calenderStrongLine);
+    border-right: 1px solid var(--calender-line--strong);
 }
 
 /* Day Columns */
@@ -275,8 +225,8 @@ Main Content
         left: 0;
         right: 0;
         bottom: 0;
-        background-image: linear-gradient(var(--calenderStrongLine) 1px, transparent 1px),
-                          linear-gradient(var(--calenderWeakLine) 1px, transparent 1px);
+        background-image: linear-gradient(var(--calender-line--strong) 1px, transparent 1px),
+                          linear-gradient(var(--calender-line--weak) 1px, transparent 1px);
         background-size: var(--hourHeight) var(--hourHeight), var(--hourHeight) var(--hourHeight);
         background-position: -1px -1px, -1px calc(var(--hourHeight) / 2 - 1px);
     }
@@ -288,7 +238,7 @@ Main Content
     flex-direction: column;
 
     &:not(:last-child) {
-        border-right: 1px solid var(--grey-blue-2);
+        border-right: 1px solid var(--calender-line--strong);
     }
 }
 
@@ -348,13 +298,13 @@ Calendar Events
     color: var(--white);
 }
 
-.CalendarWidget-event.type-rsync_copy .CalendarWidget-event-inner                        { background-color: var(--orange); }
-.CalendarWidget-event.type-volume_scrub .CalendarWidget-event-inner                      { background-color: var(--blue-darken-2); }
-.CalendarWidget-event.type-replication_replicate_dataset .CalendarWidget-event-inner     { background-color: var(--aqua); }
-.CalendarWidget-event.type-disk_parallel_test .CalendarWidget-event-inner                { background-color: var(--purple); }
-.CalendarWidget-event.type-update_checkfetch .CalendarWidget-event-inner                 { background-color: var(--yellow-orange); }
-.CalendarWidget-event.type-volume_snapshot_dataset .CalendarWidget-event-inner           { background-color: var(--maroon); }
-.CalendarWidget-event.type-calendar_task_command .CalendarWidget-event-inner             { background-color: var(--grey-1); }
+.CalendarWidget-event.type-rsync_copy .CalendarWidget-event-inner                        { background-color: var(--task-rsync-color); }
+.CalendarWidget-event.type-volume_scrub .CalendarWidget-event-inner                      { background-color: var(--task-scrub-color); }
+.CalendarWidget-event.type-replication_replicate_dataset .CalendarWidget-event-inner     { background-color: var(--task-replication-color); }
+.CalendarWidget-event.type-disk_parallel_test .CalendarWidget-event-inner                { background-color: var(--task-smart-color); }
+.CalendarWidget-event.type-update_checkfetch .CalendarWidget-event-inner                 { background-color: var(--task-update-color); }
+.CalendarWidget-event.type-volume_snapshot_dataset .CalendarWidget-event-inner           { background-color: var(--task-snapshot-color); }
+.CalendarWidget-event.type-calendar_task_command .CalendarWidget-event-inner             { background-color: var(--task-command-color); }
 
 .CalendarWidget-event.is-selected .CalendarWidget-event-inner {
     color: var(--white);
