--- a/ui/main-sidebar/main-sidebar.reel/_main-sidebar.css
+++ b/ui/main-sidebar/main-sidebar.reel/_main-sidebar.css
@@ -1,10 +1,9 @@
 .MainSidebar {
     display: flex;
     flex-direction: column;
-    border-right: 1px solid var(--grey);
-    background-color: var(--blue-darken-3);
+    border-right: 1px solid var(--separator-color);
+    background-color: var(--primary--6);
     background-size: 310px 195px;
-    /* background-image: url(../../../assets/images/bg.png); */
     width: 9rem;
 }
 
@@ -70,7 +69,7 @@
 .MainSidebar-globalActions-button {
     position: relative;
     z-index: 1;
-    background: var(--black);
+    background: var(--primary--9);
     display: flex;
     padding: .5em;
     cursor: pointer;
