--- a/ui/sections/storage/inspectors/available-disks.reel/_available-disks.css
+++ b/ui/sections/storage/inspectors/available-disks.reel/_available-disks.css
@@ -4,13 +4,10 @@
     @apply --flex-column;
 }
 
-.AvailableDisks-header {
-    height: 4em;
-    padding: .75em 1em;
-    background-color: var(--transparent--lighten);
-    color: var(--grey-2);
-
-    & p { margin-bottom: 0; }
+.AvailableDisks-header.Panel {
+    margin: .5rem;
+    width: auto;
+    display: flex;
 }
 
 .AvailableDisks-category {
@@ -21,7 +18,7 @@
 /* edits to remove offsets for lack of padding*/
 
 .AvailableDisks .FoldableSection {
-    margin: 0;
+    margin:  0;
     padding: 0;
 
     & .InspectorSectionTitle-text {
