--- a/ui/sections/storage/inspectors/volume.reel/_volume.css
+++ b/ui/sections/storage/inspectors/volume.reel/_volume.css
@@ -7,20 +7,19 @@
 
 /* $fix - should this be a component */
 .Volume-header {
-    height: 4em;
+    padding-left: .75rem;
+    height: 4.5rem;
     display: flex;
-    justify-content: center;
     align-items: center;
-    background: var(--grey-3);
-    color:      var(--grey-blue);
+    background: var(--primary--8);
 }
 
 /* Icon */
 
 .Volume-header-icon {
-    width:  3em;
-    height: 3em;
-    margin-right: 1em;
+    width:  3rem;
+    height: 3rem;
+    margin-right: 1rem;
 }
 
 .Volume-header-icon img { width:  100%; }
@@ -28,12 +27,12 @@
 /* Info */
 
 .Volume-header-diskSize {
-    font-size: 1.5em;
+    font-size: 1.25em;
     font-weight: 400;
     line-height: 1rem;
 }
 
 .Volume-allocationBar {
-    height: 1em !Important;
+    height: 1rem !Important;
     width: 100%;
 }
