--- a/ui/widgets/system-info.reel/_system-info.css
+++ b/ui/widgets/system-info.reel/_system-info.css
@@ -14,6 +14,7 @@
         right: 0;
         bottom: 0;
         height: 2.5em;
-        background-image: linear-gradient(rgba(22, 23, 26,0),rgba(22, 23, 26,1) 75%);
+        background-image: linear-gradient(color(var(--primary--8) a(0%)), var(--primary--8));
+        border-radius: 4px;
     }
 }
