--- a/ui/controls/cascading-list.reel/cascading-list-item.reel/_cascading-list-item.css
+++ b/ui/controls/cascading-list.reel/cascading-list-item.reel/_cascading-list-item.css
@@ -14,7 +14,7 @@
     flex-shrink: 0;
     justify-content: space-between;
     height:  calc(3rem - 1px);
-    font-size: 1.25rem;
+    /* font-size: 1.25rem; */
     padding: 0 1rem;
     background-color: var(--primary);
     border-bottom: 1px solid var(--separator-color);
