--- a/ui/main-sidebar/main-navigation.reel/main-navigation-item.reel/_main-navigation-item.css
+++ b/ui/main-sidebar/main-navigation.reel/main-navigation-item.reel/_main-navigation-item.css
@@ -12,7 +12,7 @@
 
     &:hover {
         color: var(--white);
-        background-color: var(--primary);
+        background-color: var(--primary--4);
     }
 }
 
@@ -34,6 +34,11 @@
     height: 1.4rem;
     margin-right: .75rem;
     color: var(--color-selected);
+    transition: color .25s ease-in-out;
+
+    @nest .MainNavigationItem:hover & {
+        color: var(--white);
+    }
 
     @nest .MainNavigationItem.selected & {
         color: var(--white);
