moves cascading list item header into inspector and if a section root doesn’t have an overview then don’t show a header

--- a/ui/controls/inspector-option.reel/_inspector-option.css
+++ b/ui/controls/inspector-option.reel/_inspector-option.css
@@ -1,5 +1,6 @@
 .InspectorOption {
     outline: none;
+    margin: 0 -1rem;
 
     & > * {
         border-top:     1px solid var(--transparent--lighten);
