arrow should rotate when active Ticket: #20885

--- a/ui/sections/storage/inspectors/overview.reel/volume-overview-item.reel/_volume-overview-item.css
+++ b/ui/sections/storage/inspectors/overview.reel/volume-overview-item.reel/_volume-overview-item.css
@@ -40,7 +40,7 @@
         left: -2px;
     }
 
-    @nest .InterfaceOverviewItem.is-expanded & svg { transform: rotate(0); }
+    @nest .VolumeOverviewItem.is-expanded & svg { transform: rotate(0); }
 }
 
 .VolumeOverviewItem-name {
