fixes colors in support and wizard

--- a/ui/sections/system/inspectors/support.reel/_support.css
+++ b/ui/sections/system/inspectors/support.reel/_support.css
@@ -3,8 +3,9 @@
 }
 
 .Support-header {
-    background: var(--grey);
-    padding: 1em;
+    background: var(--primary--4);
+    padding: 1rem;
+    padding-bottom: 0;
 }
 
 .Support-header a {
