Preparatory works for issue #19987

--- a/ui/sections/containers/controls/docker-image-search.reel/_docker-image-search.css
+++ b/ui/sections/containers/controls/docker-image-search.reel/_docker-image-search.css
@@ -18,3 +18,7 @@
 .DockerImageSearch-table .TableHeaderLayout-row .TableHeaderLayout-cell:nth-child(3) {
     max-width: 5em;
 }
+
+.DockerImageSearch-message {
+    text-align: center;
+}
