--- a/ui/inspectors/inspector.reel/_inspector.css
+++ b/ui/inspectors/inspector.reel/_inspector.css
@@ -6,8 +6,6 @@
     min-width: 15em;
     overflow: hidden;
 
-    & .Scrollview-transform { flex: none; }
-
     &.confirmation-is-visible { position: initial; }
 }
 
@@ -19,7 +17,6 @@
     flex-shrink: 0;
     justify-content: space-between;
     height:  3rem;
-    /* font-size: 1.25rem; */
     padding: 0 1rem;
     background-color: var(--primary);
     border-bottom: 1px solid var(--separator-color);
@@ -30,8 +27,18 @@
 }
 
 .Inspector-body {
-    margin: 1em;
+    display: flex;
+
+    &-scrollview {
+        padding: 1rem;
+        padding-bottom: 0;
+    }
+
+    & .ListItem {
+        margin: 0 -1em;
+    }
 }
+
 
 .Inspector.is-loading .Inspector-body,
 .Inspector.is-loading .Inspector-footer {
