--- a/ui/controls/cascading-list.reel/cascading-list.css
+++ b/ui/controls/cascading-list.reel/cascading-list.css
@@ -1,1 +1,1 @@
-.CascadingList,.CascadingList-repetition{display:-webkit-box;display:-ms-flexbox;display:flex}.CascadingList-repetition{-ms-flex-wrap:nowrap;flex-wrap:nowrap;-webkit-box-flex:1;-ms-flex:1;flex:1;min-height:0}
+.CascadingList{min-width:0}.CascadingList,.CascadingList-repetition{display:-webkit-box;display:-ms-flexbox;display:flex}.CascadingList-repetition{-ms-flex-wrap:nowrap;flex-wrap:nowrap;-webkit-box-flex:1;-ms-flex:1;flex:1;min-height:0}
