--- a/ui/main.reel/_main.css
+++ b/ui/main.reel/_main.css
@@ -9,17 +9,20 @@
     display: flex;
     flex-direction: column;
     min-height: 0;
+    min-width:  0;
 }
 
 .Main-wrapper {
     flex: 1;
     display: flex;
     min-height: 0;
+    min-width:  0;
 }
 
 .Main-content {
     flex: 1;
     display: flex;
+    min-width: 0;
 }
 
 .Main-substitution {
