--- a/ui/controls/viewer.reel/_viewer.css
+++ b/ui/controls/viewer.reel/_viewer.css
@@ -85,6 +85,7 @@
     padding: 0 1em;
     display: flex;
     align-items: center;
+    flex-shrink: 0;
     background: var(--primary--4);
 
     & .montage-Slot {
