fix regression in field-tree

--- a/ui/controls/field-treeview.reel/_field-treeview.css
+++ b/ui/controls/field-treeview.reel/_field-treeview.css
@@ -1,4 +1,4 @@
-.FieldTreeview-path { position: relative; }
+.FieldTreeview-path { position: relative; flex: 1; }
 
 .FieldTreeview-path-input { flex: 1; }
 
